service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  selector:
    app: service
  ports:
  - port: 3000
    targetPort: 3000

  type: LoadBalancer
